--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -257,7 +257,6 @@
                       <select
                         class="form-control w-100 h-40 pl-2"
                         [(ngModel)]="userType"
-                        (click)="filterUsers()"
                         formControlName="userType"
                         required
                       >
@@ -467,7 +466,7 @@
                     type="button"
                     data-dismiss="modal"
                     (click)="deleteUser()"
-                    class="btn btn-yes"
+                    class="btn btn-primary"
                   >
                     Yes
                   </button>
